[gd_scene load_steps=7 format=3 uid="uid://2kvr81dwgbde"]

[ext_resource type="Script" path="res://lever.gd" id="1_50ds1"]
[ext_resource type="Texture2D" uid="uid://baa4k5kkhg58r" path="res://leever1.png" id="2_xrr65"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qtlxx"]
atlas = ExtResource("2_xrr65")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_itb0a"]
atlas = ExtResource("2_xrr65")
region = Rect2(0, 128, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_k1qu3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtlxx")
}],
"loop": true,
"name": &"off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_itb0a")
}],
"loop": true,
"name": &"on",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8kmp3"]
size = Vector2(35.8864, 34.25)

[node name="lever" type="CharacterBody2D"]
z_index = 3
collision_layer = 32
collision_mask = 7
script = ExtResource("1_50ds1")

[node name="lever_anim" type="AnimatedSprite2D" parent="."]
position = Vector2(5, 2)
sprite_frames = SubResource("SpriteFrames_k1qu3")
animation = &"off"

[node name="lever_col2" type="CollisionShape2D" parent="."]
position = Vector2(-3, 12)
scale = Vector2(0.68, 0.72)
shape = SubResource("RectangleShape2D_8kmp3")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(1, -7)
collision_layer = 2
collision_mask = 7

[node name="lever_col" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-3, 24.8375)
scale = Vector2(1.1, 1.1)
shape = SubResource("RectangleShape2D_8kmp3")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
